adding some more task

--- a/0x00-html_advanced/17-index.html
+++ b/0x00-html_advanced/17-index.html
@@ -14,17 +14,17 @@
          <div>
             <span>Techium</span>
             <nav></nav>
-        </div>
-     </header>
+        </div><br><!--Header-->
+     </header><br><!--Header-->
      <main>
         <h1>Homepage</h1>
         <section>
-            <div>
+            <div><br><!--Hero section-->
                 <h2>We help you build your brand!</h2>
             </div>
         </section>
          <section>
-             <div>
+             <div><br><!--Services Section-->
                  <header>
              <h2>Services</h2>
              <p>We work with you</p>
@@ -41,7 +41,7 @@
          </section>
          <section>
              <div>
-                 <header>
+                 <header><br><!--Works section-->
              <h2>Works</h2>
              <p>Take a look in our portfolio</p>
              </header>
@@ -59,7 +59,7 @@
         </section>
          <section>
              <div>
-                 <header>
+                 <header><br><!--About Us section-->
             <h2>About Us</h2>
             <p>Everything about us</p>
             </header>
@@ -77,7 +77,7 @@
             </section>
          <section>
              <div>
-                 <header>             
+                 <header><br><!--Latest news section-->
                      <h2>Latest News</h2>
                      </header>
                      <div>
@@ -115,7 +115,7 @@
     </section>
     <section>
         <div>
-            <header>
+            <header><br><!--Contact section-->
                  <h2>Contact</h2>
              <p>We like to know new people</p>
              </header>
@@ -125,7 +125,7 @@
          </div>
      </section>
 </main>
-    
+    <!--<br>Footer<br>-->
      <footer>
          <div>Footer</div>
 
