--- a/0x00-html_advanced/26-styleguide.html
+++ b/0x00-html_advanced/26-styleguide.html
@@ -29,6 +29,34 @@
              <h2>Heading with a subtitle</h2>
              <p>Nunc lacinia ante nunc ac lobortis. Interdum adipiscing gravida odio porttitor sem non mi integer non faucibus ornare mi ut ante amet placerat aliquet. Volutpat eu sed ante lacinia sapien lorem accumsan varius montes viverra nibh in adipiscing blandit tempus accumsan.</p>
          </section>
+         <!--List-->
+         <section>
+             <header>
+                 <h2>Lists</h2>
+                 <div>
+                     <h3>Unordered</h3>
+                     <ul>
+                         <li>Dolor pulvinar etiam magna etiam.</li>
+                         <li>Sagittis adipiscing lorem eleifend.</li>
+                         <li>Felis enim feugiat dolore viverra.</li>
+                         </ul>
+                    <h3>Ordered</h3>
+                    <ol>
+                        <li>Dolor pulvinar etiam magna etiam.</li>
+                        <li>Sagittis adipiscing lorem eleifend.</li>
+                        <li>Felis enim feugiat dolore viverra.</li>
+                    </ol>
+                    <h3>Definition</h3>
+                    <dl>
+                        <dt>Definition List title</dt>
+                        <dd>Definition text.</dd>
+                        <dt>Startup</dt>
+                        <dd>A colorless, transparent, odorless liquid that forms the seas, lakes, rivers, and rain and is the basis of the fluids of living organisms.</dd>
+
+                    </dl>
+                 </div>
+             </header>
+         </section>
      </main>
      <footer></footer>
  </body>
