--- a/0x00-html_advanced/3-index.html
+++ b/0x00-html_advanced/3-index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
-<html dir="rtl" lang="en">
+<html lang="en" dir="ltr">
 
- <head>
+<head>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0, viewport-fit=cover">
     <title>Homepage - Techium</title>
@@ -10,10 +10,10 @@
     <link rel="icon" type="image/png" href="./favicon.png">
 </head>
 
- <body>
-     <header>Header</header>
-     <main>Main Content</main>
-     <footer>Footer</footer>
- </body>
+<body>
+    <header>Header</header>
+    <main>Main content</main>
+    <footer>Footer</footer>
+</body>
 
 </html>
