--- a/0x04-flexbox/3-index.html
+++ b/0x04-flexbox/3-index.html
@@ -1,12 +1,12 @@
 <!DOCTYPE html>
 <html lang="en" dir="ltr">
   <head>
-    <meta charset="utf-8" />
+    <meta charset="UTF-8" />
     <meta
       name="viewport"
-      content="width=device-width, initial-scale=1, viewport-fit=cover"
+      content="width=device-width, initial-scale=1.0, viewport-fit0cover"
     />
-    <title>Homepage - Techium</title>
+    <title>Homepage - Technium</title>
     <meta
       name="description"
       content="Description of the page less than 150 characters"
@@ -16,10 +16,10 @@
       href="https://fonts.googleapis.com/css?family=Open+Sans:400,700|Raleway:700&display=swap"
       rel="stylesheet"
     />
-    <link rel="stylesheet" href="0-styles.css" />
+    <link rel="stylesheet" href="3-styles.css" />
   </head>
   <body>
-    <!– Header –>
+    <!-- Header -->
     <header class="header" data-section-theme="dark">
       <div class="container">
         <div class="header-logo">
@@ -59,9 +59,9 @@
         </nav>
       </div>
     </header>
-    <!– Main –>
+    <!-- Main -->
     <main>
-      <!– Hero section –>
+      <!-- Hero section -->
       <section class="section-hero" data-section-theme="dark">
         <div class="container">
           <div class="section-body">
@@ -72,7 +72,7 @@
           </div>
         </div>
       </section>
-      <!– Services section –>
+      <!-- Services section -->
       <section id="services" class="section section-services">
         <div class="container">
           <header class="section-header">
@@ -96,8 +96,6 @@
                   <h3 class="card-title"><a href="#">Content Strategy</a></h3>
                 </div>
               </li>
-            </ul>
-            <ul class="row">
               <li class="col-1-3">
                 <div class="card-services">
                   <h3 class="card-title"><a href="#">UX Design</a></h3>
@@ -117,8 +115,12 @@
           </div>
         </div>
       </section>
-      <!– Works section –>
-      <section id="works" class="section section-works" data-section-theme="dark">
+      <!-- Works section -->
+      <section
+        id="works"
+        class="section section-works"
+        data-section-theme="dark"
+      >
         <div class="container">
           <header class="section-header">
             <h2 class="section-title">Works</h2>
@@ -172,7 +174,7 @@
           </div>
         </div>
       </section>
-      <!– About Us section –>
+      <!-- About Us section -->
       <section id="about" class="section section-about-us">
         <div class="container">
           <header class="section-header">
@@ -219,7 +221,7 @@
           </div>
         </div>
       </section>
-      <!– Latest news section –>
+      <!-- Latest news section -->
       <section id="latest_news" class="section section-latest-news">
         <div class="container">
           <header class="section-header">
@@ -301,7 +303,7 @@
           </div>
         </div>
       </section>
-      <!– Testimonials section –>
+      <!-- Testimonials section -->
       <section id="testimonial" class="section section-testimonial">
         <div class="container">
           <header class="section-header">
@@ -368,7 +370,7 @@
           </div>
         </div>
       </section>
-      <!– Contact section –>
+      <!-- Contact section -->
       <section id="contact" class="section section-contact">
         <div class="container">
           <header class="section-header">
@@ -388,7 +390,7 @@
         </div>
       </section>
     </main>
-    <!– Footer –>
+    <!-- Footer -->
     <footer class="footer" data-section-theme="dark">
       <div class="container">
         <div class="row">
