finished the task

--- a/0x04-flexbox/11-article.html
+++ b/0x04-flexbox/11-article.html
@@ -51,14 +51,14 @@
     <main>
       <!– Hero section –>
       <header class="section-hero hero-article" data-section-theme="dark" style="background-image: url(./images/pic-article-02.jpg)">
-        <span class="section-category">Digital Life</span>
-        <h1 class="section-category">Ut alios omittam, hunc appello, quem ille unum secutus est
-        </h1>
         <div class="container">
           <div class="section-body">
             <section class="section-inner">
-            </section>
-          </div>
+        <span class="section-category">Digital Life</span>
+        <h1 class="section-tittle">Ut alios omittam, hunc appello, quem ille unum secutus est
+        </h1>
+        </section>
+        </div>
         </div>
       </header>
     </main>
